<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#001155"
    tools:context="com.ftfl.myfavourateplaces.ConfirmationActivity" >

    <ImageView
        android:id="@+id/imageViewThumb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:contentDescription="@string/content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewPosition"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:textColor="#ffffff"
        android:text="@string/latlon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#ffffff"
        android:hint="@string/remarks"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:onClick="Save"
        android:text="@string/save" />

</LinearLayout>