<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001155"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ftfl.myfavourateplaces.RegisterActivity" >

    <ImageView
        android:id="@+id/imageViewPlace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:contentDescription="@string/retrieved"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_weight="1"
		android:padding="10dp"
		android:background="#ffffff"
		android:layout_gravity="center"
		android:layout_margin="20dp"
        android:text="@string/takephoto" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_weight="1"
		android:padding="10dp"
		android:background="#ffffff"
		android:layout_gravity="center"
		android:layout_margin="20dp"
        android:text="@string/register" />

</LinearLayout>